--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,20 +1,32 @@
 @import "../../utils/common";
 
-.three_home{
+.three_home {
   padding: 20px;
 }
-.three_home_time{
+
+.three_home_time {
   @include hp();
 }
-.three_home_time_m{
+
+.three_home_time_m {
   text-align: center;
   padding: 40px;
   flex: 1;
 }
-.three_home_time_l{
-  width: 80px;
-  text-align: center;
+
+.three_home_time_m_bottom {
+  font-size: 80%;
+  color: #999;
 }
-.three_home_time_r{
+
+.three_home_time_l {
+  width: 80px;
+
+  view {
+    margin: 0 auto;
+  }
+}
+
+.three_home_time_r {
   @extend .three_home_time_l;
 }
